syntax = "proto3";

package hotel;

import "google/protobuf/timestamp.proto";

message Hotel {
  string id = 1;
  string name = 2;
  int32 price = 3;
  string imageurl = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message HotelResponse { Hotel hotel = 1; }
