syntax = "proto3";

package hotel;

message CreateHotelRequest {
  string name = 1;
  int32 maxcount = 2;
  int32 phonenumber = 3;
  int32 rentperday = 4;
  repeated string imageurls = 5;
  repeated string currentbookings = 6;
  string type = 7;
  string description = 8;
  string location = 9;
}




