syntax = "proto3";

package auth;

message SignInUserInput {
  string email = 1;
  string password = 2;
}