syntax = "proto3";

package auth;

import "user.proto";

message SignUpUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message SignUserResponse { 
  User user = 1;
  string token = 2;
}
