syntax = "proto3";

package auth;

import "user.proto";
import "rpc_signup_user.proto";
import "rpc_signin_user.proto";

import "hotel.proto";
import "rpc_create_hotel.proto";

//User service
service AuthService {
  rpc SignUpUser(SignUpUserInput) returns (SignUserResponse) {}
  rpc SignInUser(SignInUserInput) returns (SignUserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (stream User) {}
}

message GetUsersRequest {
  int64 page = 1;
  int64 limit = 2;
}

message UserRequest { string id = 1; }

// Hotel Service
service HotelService {
  rpc GetHotel(HotelRequest) returns (HotelResponse) {}
  rpc GetHotels(GetHotelsRequest) returns (stream Hotel) {}
  rpc CreateHotel(CreateHotelRequest) returns (HotelResponse) {}
}

message GetHotelsRequest {
  int64 page = 1;
  int64 limit = 2;
}

message HotelRequest { string id = 1; }
